<resources>
    <string name="app_name">MyFlix</string>
    <string name="movie_title">Movie title</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nothing_found">Nothing found :(</string>
    <string name="myflix">MyFlix</string>
    <string name="year">Year:</string>
    <string name="length">Length:</string>
    <string name="genre">Genre:</string>
    <string name="directed_by">Directed by:</string>
    <string name="todo">TODO</string>
</resources>