<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.myflix.MoviesFragment"
        android:id="@+id/moviesFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <EditText
            android:id="@+id/editTextMovieTitle"
            android:layout_width="@dimen/dp_290"
            android:layout_height="@dimen/dp_80"
            android:hint="@string/movie_title"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="name" />



        <Button
            android:id="@+id/buttonSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextMovieTitle"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
             />

        <TextView
            android:id="@+id/textViewLogo"
            app:layout_constraintBottom_toTopOf="@+id/editTextMovieTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/myflix"
            android:textSize="@dimen/sp_36"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


